--- a/login.html
+++ b/login.html
@@ -11,16 +11,21 @@
 <body>
   <div class="login-box">
     <form>
-      <h1>Log in-</h1>
+      <h2>Welcome Back!</h2>
+      <p class = "h2class">Enter your credentials to access your<br>account.</p>
       <label>
-        Username
+        Username 
       </label>
       <input text="text"placeholder="Type Username">
       <label>Password</label>
       <input type = "password"id=" pwd"minlength="10">
+      <p class = "passwordbottom">
+        Remember Your Password.
+        <a href = "#" target="main">Forgot password</a>
+      </p>
       <button><a href = "#">Submit</a></button>
       <br>
-      <p>Already have in account? <a href = "#" >Log In</a></p>
+      <p class = "bottonbottom">Already have in account? <a href = "#" >Log In</a></p>
     </form>
   </div>
 
